Fix layout and text responsiveness on smaller screens

--- a/content/css/site.css
+++ b/content/css/site.css
@@ -2,164 +2,186 @@
  * Globals
  */
 
- @media (min-width: 48em) {
-    html {
-      font-size: 18px;
-    }
+html {
+  font-size: 13px;
+}
+
+@media screen and (max-width: 767px) {
+  html {
+    font-size: 13px;
   }
+}
 
-  body {
-    font-family: 'PT Sans', sans-serif;
-    font-size: 1.3rem;
-    color: #555;
+/* sm */
+@media screen and (min-width: 768px) {
+  html {
+    font-size: 16px;
   }
+}
 
-  h1, .h1,
-  h2, .h2,
-  h3, .h3,
-  h4, .h4,
-  h5, .h5,
-  h6, .h6 {
-    font-family: 'Faustina', serif;
-    font-weight: normal;
-    margin-top: 1.3rem;
-    margin-bottom: 1.5rem;
-    color: #333;
+/* md */
+@media screen and (min-width: 992px) {
+  html {
+    font-size: 18px;
   }
+}
 
-  /*
-   * Override Bootstrap's default container.
-   */
-
-  .container {
-    max-width: 60rem;
+/* lg */
+@media screen and (min-width: 1200px) {
+  html {
+    font-size: 20px;
   }
+}
 
 
-  /*
-   * Masthead for nav
-   */
+body {
+  font-family: 'PT Sans', sans-serif;
+  font-size: 1.3rem;
+  color: #555;
+}
 
-  .blog-masthead {
-    margin-bottom: 2rem;
-    background-color: #428bca;
-    -webkit-box-shadow: inset 0 -.1rem .25rem rgba(0,0,0,.1);
-            box-shadow: inset 0 -.1rem .25rem rgba(0,0,0,.1);
-  }
+h1, .h1,
+h2, .h2,
+h3, .h3,
+h4, .h4,
+h5, .h5,
+h6, .h6 {
+  font-family: 'Faustina', serif;
+  font-weight: normal;
+  margin-top: 1.3rem;
+  margin-bottom: 1.5rem;
+  color: #333;
+}
 
-  /* Nav links */
-  .nav-link {
-    position: relative;
-    padding: 0rem;
-    margin: 1rem 2rem 1rem 0rem;
-    font-weight: 500;
-    color: #cdddeb;
-  }
-  .nav-link:hover,
-  .nav-link:focus {
-    color: #fff;
-    background-color: transparent;
-  }
+/*
+ * Override Bootstrap's default container.
+ */
 
-  /* Active state gets a caret at the bottom */
-  .nav-link.active {
-    color: #fff;
-    font-weight: bold;
-  }
+.container {
+  max-width: 60rem;
+}
 
-  /*
-   * Blog name and description
-   */
 
-  .blog-header {
-    font-family: 'Crete Round', serif;
-  }
-  .blog-title {
-    margin-bottom: 0;
-    font-size: 2rem;
-    font-weight: normal;
-  }
+/*
+ * Masthead for nav
+ */
+
+.blog-masthead {
+  margin-bottom: 2rem;
+  background-color: #428bca;
+  -webkit-box-shadow: inset 0 -.1rem .25rem rgba(0,0,0,.1);
+          box-shadow: inset 0 -.1rem .25rem rgba(0,0,0,.1);
+}
+
+/* Nav links */
+.nav-link {
+  position: relative;
+  padding: 0rem;
+  margin: 1rem 2rem 1rem 0rem;
+  font-weight: 500;
+  color: #cdddeb;
+}
+.nav-link:hover,
+.nav-link:focus {
+  color: #fff;
+  background-color: transparent;
+}
+
+/* Active state gets a caret at the bottom */
+.nav-link.active {
+  color: #fff;
+  font-weight: bold;
+}
+
+/*
+ * Blog name and description
+ */
+
+.blog-header {
+  font-family: 'Crete Round', serif;
+}
+.blog-title {
+  margin-bottom: 0;
+  font-size: 3.5rem;
+  font-weight: normal;
+}
+.blog-description {
+  font-size: 1.2rem;
+  color: #999;
+}
+
+@media (max-width: 40em) {
   .blog-description {
-    font-size: 1.2rem;
-    color: #999;
-    margin-bottom: 0;
-    text-align: right;
+    margin-bottom: 1rem;
   }
+}
 
-  @media (min-width: 40em) {
-    .blog-title {
-      font-size: 3.5rem;
-    }
-  }
+/*
+ * Main column and sidebar layout
+ */
 
-
-  /*
-   * Main column and sidebar layout
-   */
-
-  /* Sidebar modules for boxing content */
-  .sidebar-module {
-    padding: 1rem;
-    /*margin: 0 -1rem 1rem;*/
-  }
-  .sidebar-module-inset {
-    padding: 1rem;
-    background-color: #f5f5f5;
-    border-radius: .25rem;
-  }
-  .sidebar-module-inset p:last-child,
-  .sidebar-module-inset ul:last-child,
-  .sidebar-module-inset ol:last-child {
-    margin-bottom: 0;
-  }
+/* Sidebar modules for boxing content */
+.sidebar-module {
+  padding: 1rem;
+}
+.sidebar-module-inset {
+  padding: 1rem;
+  background-color: #f5f5f5;
+  border-radius: .25rem;
+}
+.sidebar-module-inset p:last-child,
+.sidebar-module-inset ul:last-child,
+.sidebar-module-inset ol:last-child {
+  margin-bottom: 0;
+}
 
 
-  /* Pagination */
-  .blog-pagination {
-    margin-bottom: 4rem;
-  }
-  .blog-pagination > .btn {
-    border-radius: 2rem;
-  }
+/* Pagination */
+.blog-pagination {
+  margin-bottom: 4rem;
+}
+.blog-pagination > .btn {
+  border-radius: 2rem;
+}
 
 
-  /*
-   * Blog posts
-   */
+/*
+ * Blog posts
+ */
 
-  .blog-post {
-    margin-bottom: 4rem;
-  }
-  .blog-post-title {
-    margin-bottom: .75rem;
-    font-size: 2.5rem;
-  }
-  .blog-post-meta {
-    margin-bottom: 1.25rem;
-    color: #999;
-  }
-  .blog-post-tags {
-    margin-top: 3rem;
-    margin-bottom: 1.25rem;
-    font-size: 1.2rem;
-    color: #999;
-  }
+.blog-post {
+  margin-bottom: 4rem;
+}
+.blog-post-title {
+  margin-bottom: .75rem;
+  font-size: 2.5rem;
+}
+.blog-post-meta {
+  margin-bottom: 1.25rem;
+  color: #999;
+}
+.blog-post-tags {
+  margin-top: 3rem;
+  margin-bottom: 1.25rem;
+  font-size: 1.2rem;
+  color: #999;
+}
 
 
-  /*
-   * Footer
-   */
+/*
+ * Footer
+ */
 
-  .blog-footer {
-    padding: 1.3rem 0;
-    color: #999;
-    background-color: #f9f9f9;
-    border-top: .05rem solid #e5e5e5;
-  }
-  .blog-footer p:last-child {
-    margin-bottom: 0;
-  }
+.blog-footer {
+  padding: 1.3rem 0;
+  color: #999;
+  background-color: #f9f9f9;
+  border-top: .05rem solid #e5e5e5;
+}
+.blog-footer p:last-child {
+  margin-bottom: 0;
+}
 
-  .blog-footer-right {
-    text-align: right;
-  }
+.blog-footer-right {
+  text-align: right;
+}
